force-app/main/default/objects/TTS_Space_Fee__c/TTS_Space_Fee__c.object-meta.xml
<CustomObject>
    <description>[TTS] Fees and Subscriptions related to the space and the space occupant</description>
    <label>Space Fee</label>
    <nameField>
        <displayFormat>SF-{000000}</displayFormat>
        <label>Space Fee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Space Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>