force-app/main/default/objects/TTS_Space_Fee__c/fields/Agreed_Discount__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Discount__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Agreed Discount</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>