force-app/main/default/objects/TTS_Space_Fee__c/fields/Due_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Time__c</fullName>
    <label>Due Date/Time</label>
    <type>DateTime</type>
</CustomField>