force-app/main/default/objects/TTS_Space_Fee__c/fields/Paid_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Paid_Date_Time__c</fullName>
    <label>Paid Date/Time</label>
    <type>DateTime</type>
</CustomField>