force-app/main/default/objects/TTS_Space_Fee__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>