force-app/main/default/objects/TTS_Space_Fee__c/fields/Space__c.field-meta.xml
<CustomField>
    <fullName>Space__c</fullName>
    <label>Space</label>
    <referenceTo>TTS_Space__c</referenceTo>
    <relationshipName>Space_Subscriptions_Fees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>