force-app/main/default/objects/TTS_Space_Fee__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Fine</fullName>
            </value>
            <value>
                <fullName>Internet/Network Access Fee</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Service Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>